--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.15",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
+    "material-react-table": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
